# brent-scheme

./: README.md  pyproject.toml
3_3_3_22_e-3.145 Scheme Parameters/: 3_3_3_22_e-3.145_alpha_pnd.pkl  3_3_3_22_e-3.145_beta__pdm.pkl  3_3_3_22_e-3.145_gamma_nmp.pkl
notebooks/: NUMPY Mat_Mult.ipynb  TORCH_Mat_Mult.ipynb
scripts/: 1_init_test.py  2_display_tests.py  3_factory_tests.py  4_manipulator_tests.py  5_stepper_tests.py  6_trainer_tests.py  init_test.py  run_experiments.py
src/brentscheme/: BrentScheme.py  SchemaFactory.py  SchemeDisplay.py  SchemeManipulator.py  Stepper.py  Trainer.py  __init__.py  misc.py
src/brentscheme/utils/: io.py  tensors.py
src/evacsim/: __init__.py  plotting.py
tests/: conftests.py  test_display.py  test_factory.py  test_imports.py  test_scheme.py
