[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brentscheme"
version = "0.1.0"
description = "Tensor schemes for fast matrix multiplication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "math",
  "numpy",
  "matplotlib",
  "tqdm",
  "pandas",
  "time",
  "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
