[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brentscheme"
version = "0.2.0"
description = "Tensor schemes for fast matrix multiplication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # "math",
  "numpy",
  "matplotlib",
  "tqdm",
  "pandas",
  # "time",
  "torch",
  "scipy",
  "pytest",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
